@@ -51,10 +51,10 @@ public class Location {
    * @throws IllegalArgumentException if location is null or is an empty string.
    */
   public void setLocation(String location) {
-    if (location == null || location.trim().isEmpty()) {
+    if (location == null || location.isBlank()) {
       throw new IllegalArgumentException("Invalid location");
     }
-    this.location = location;
+    this.location = location.trim();
   }
 
   /**
